manifests/plausible/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
  labels:
    app.kubernetes.io/name: plausible-analytics
    app.kubernetes.io/instance: plausible
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plausible-analytics
      app.kubernetes.io/instance: plausible
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plausible-analytics
        app.kubernetes.io/instance: plausible
    spec:
      securityContext:
        {}
      volumes:
        - name: scripts-volume
          configMap:
            name: plausible-plausible-analytics
      containers:
        - name: plausible-analytics
          securityContext:
            {}
          image: "ghcr.io/plausible/community-edition:v2.1.4"
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -x
            - -c
            - /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh run
          volumeMounts:
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
          resources:
            {}
