manifests/plausible/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  labels:
    helm.sh/chart: plausible-analytics-0.3.3
    app.kubernetes.io/name: plausible-analytics
    app.kubernetes.io/instance: plausible
    app.kubernetes.io/version: "2.1.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: plausible-analytics
    app.kubernetes.io/instance: plausible
