manifests/plausible/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: "plausible.la-suite.apps.digilab.network"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc
                port:
                  number: 80
  tls:
    - hosts:
        - plausible.la-suite.apps.digilab.network
      secretName: plausible-tls
